# PrettyGoodAI

./: .env.example  .gitignore  ARCHITECTURE.md  BUG_REPORT.md  LOOM_OUTLINE.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml
artifacts/20260623T192201Z-01-simple-scheduling-28dad8de/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192222Z-02-reschedule-166f9857/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192242Z-03-cancellation-45c848ec/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192303Z-04-medication-refill-d01afbc2/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192324Z-05-hours-location-a42b0ee6/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192344Z-06-insurance-1c4f8645/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192405Z-07-weekend-boundary-4914f6e3/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192425Z-08-interruption-correction-c073d929/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
artifacts/20260623T192446Z-09-unclear-request-aecbe626/: analysis.json  events.jsonl  metadata.json  transcript.jsonl  transcript.txt
src/voice_tester/: __init__.py  __main__.py  analyzer.py  cli.py  (+5 more)
tests/: test_analyzer.py  test_config.py  test_scenarios.py  test_server.py
(+5 files in other folders)
