[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgai-voice-tester"
version = "0.1.0"
description = "Automated patient voice bot and QA harness for the Pretty Good AI engineering challenge"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "google-genai>=1.56,<2",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[project.scripts]
pgai-voice = "voice_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
